--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
    } ],
    "description": "Read Daring Fireball in Comic Sans and Marker Felt",
    "icons": {
-      "48": "icon.png"
+      "48": "icon48.png",
+      "128": "icon128.png"
    },
    "name": "Comic Fireball",
    "version": "1.0"
